# orodha-deployment

./: README.md  docker-compose.yaml  requirements.txt  test_requirements.txt
.github/workflows/: actions-pytest.yml
config/gateway/conf.d/: server.conf
config/gateway/conf.d/proxy_config/: keycloak.conf  list.conf  notification.conf  user.conf
orodha-base-image/: Dockerfile  build-and-push.sh  build.sh  dev-requirements.txt  prod-requirements.txt
orodha-keycloak/: pyproject.toml
orodha-keycloak/orodha_keycloak/: connection.py  utils.py
orodha-keycloak/orodha_keycloak/connections/: __init__.py  admin.py  client.py  exceptions.py
orodha-keycloak/src/orodha-keycloak-edison_stuart/: __init__.py  connection.py  main.py
orodha-keycloak/src/orodha-keycloak-edison_stuart/connections/: admin.py
orodha-keycloak/src/orodha_keycloak_edison_stuart/: __init__.py  connection.py
orodha-keycloak/src/orodha_keycloak_edison_stuart/connections/: __init__.py  admin.py  client.py  exceptions.py
orodha-keycloak/tests/: conftest.py  test_connection.py  test_operations.py
orodha-keycloak/tests/fixtures/: __init__.py  keycloak.py  keycloak_test_fixtures.py
orodha-keycloak/tests/mocks/: keycloak_connection.py  keycloak_connection_mock.py
scripts/db-init/: list_db_init.js  notification_db_init.js  user_db_init.js
scripts/list_scripts/: list_db_init.js
scripts/notification_scripts/: notification_db_init.js
scripts/user_scripts/: user_db_init.js
