[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orodha-keycloak"
version = "0.0.1"
authors = [
  { name="Edison Stuart", email="edisonstaurt@gmail.com" },
]
description = "A facade package used to preform required keycloak actions which will be made available throughout each Orodha service."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]